# Jishcord

./: .gitignore  CMakeLists.txt  main.cpp  main.py  requirements.txt
